--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,11 @@ jobs:
       - name: Setup job workspace
         uses: ServerlessOpsIO/gha-setup-workspace@v1
 
+      - name: Setup Python environment
+        uses: ServerlessOpsIO/gha-setup-python@v1
+        with:
+          python_version: 3.12
+
       - name: Assume AWS Credentials
         uses: ServerlessOpsIO/gha-assume-aws-credentials@v1
         with:
@@ -32,6 +37,30 @@ jobs:
       - name: Validate StackSets SAM template (DNS Zone)
         run: sam validate --lint -t stacksets/dns-zone/stackset.yaml
 
+      - name: Validate StackSets SAM template (CFN CR)
+        run: sam validate --lint -t stacksets/cfn-cr/stackset.yaml
+
+      # Stacksets can't use CFN transforms so we need to handle the SAM transform ourselves.
+      - name: SAM build (CFN CR)
+        id: sam-build-cfn-cr
+        shell: bash
+        run: sam build -t stacksets/cfn-cr/stackset.yaml
+
+      - name: Package SAM artifact (CFN CR)
+        id: package-sam-cfn-cr
+        uses: ServerlessOpsIO/gha-package-aws-sam@v1
+        with:
+          packaged_template_file: stacksets/cfn-cr/packaged-stackset.yaml
+
+      - name: Transform SAM template (CFN CR)
+        id: transform-sam-template
+        shell: bash
+        run: |
+          wget https://raw.githubusercontent.com/aws/serverless-application-model/refs/heads/develop/bin/sam-translate.py
+          pipenv run python sam-translate.py \
+            --template-file stacksets/cfn-cr/packaged-stackset.yaml \
+            --output-template stacksets/cfn-cr/translated-stackset.json
+
       - name: Synethsize StackSet templates
         run: |
           for _f in $(find . -type f -name 'template.yaml'); do
@@ -42,14 +71,10 @@ jobs:
               $_f;
           done
 
-      - name: Package SAM artifact (Stacksets Template)
-        id: package-sam-stacksets
-        uses: ServerlessOpsIO/gha-package-aws-sam@v1
-        with:
-          packaged_template_file: packaged-template.yaml
-
       - name: Store Artifacts
         uses: ServerlessOpsIO/gha-store-artifacts@v1
+        with:
+          use_aws_sam: true
 
 
   deploy_stacksets:
@@ -66,6 +91,11 @@ jobs:
         with:
           checkout_artifact: true
 
+      - name: Setup Python environment
+        uses: ServerlessOpsIO/gha-setup-python@v1
+        with:
+          python_version: 3.12
+
       - name: Assume AWS Credentials
         uses: ServerlessOpsIO/gha-assume-aws-credentials@v1
         with:
@@ -79,6 +109,5 @@ jobs:
         with:
           aws_account_id: ${{ secrets.AWS_MANAGEMENT_ACCOUNT_ID }}
           template_file: packaged-template.yaml
-          cfn_capabilities: CAPABILITY_AUTO_EXPAND
           env_json: ${{ toJson(env) }}
           secrets_json: ${{ toJson(secrets) }}
