Fix SSM param name

--- a/stacksets/dns-zone/stackset.yaml
+++ b/stacksets/dns-zone/stackset.yaml
@@ -88,7 +88,7 @@ Resources:
   HostedZoneIdSsmParam:
     Type: "AWS::SSM::Parameter"
     Properties:
-      Name: /org/cicd/HostedZoneId
+      Name: /org/dns/RootZoneId
       Type: String
       Description: Hosted Zone ID
       Value: !Ref ServerlessOps
